Added python script to run for unknown images

--- a/main.ipynb
+++ b/main.ipynb
@@ -637,6 +637,59 @@
    "source": [
     "predict_image(r\"C:\\Users\\KEITH FERNANDES\\OneDrive\\Desktop\\Cat v Dog Classifier\\PetImages\\Dog\\18.jpg\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "4ad2af2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model saved!\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.save(\"cat_dog_classifier.h5\")\n",
+    "print(\"Model saved!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "52706bf7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model loaded!\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tensorflow.keras.models import load_model\n",
+    "model = load_model(\"cat_dog_classifier.h5\")\n",
+    "print(\"Model loaded!\")"
+   ]
   }
  ],
  "metadata": {
